--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     }
   ],
   "require": {
-    "php": ">=7.1,<7.3",
+    "php": ">=7.1",
     "psr/http-message": ">=1.0,<2.0",
     "ext-json": "*"
   },
